mise en place de la section titre

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mon-cv</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header id="titre">
+        <h1>FADOU Léon</h1>
+        <p class="poste">Étudiant en programmation </p>
+    </header>
+
 </body>
+
 </html>
