mise en place de la section Description

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mon-cv</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header id="titre">
+        <h1>FADOU Léon</h1>
+        <p class="poste">Étudiant en programmation </p>
+    </header>
+    <main>
+        <section>
+            <h2>Description</h2>
+            <p>
+                Passionné par le développement informatique, j’aime concevoir des
+                applications web performantes et apprendre de nouvelles technologies.
+                Mon objectif est de devenir un programmeur complet capable d’apporter
+                des solutions numériques efficaces.
+            </p>
+        </section>
+
+    </main>
+
 </body>
+
 </html>
