--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
                 des solutions numériques efficaces.
             </p>
         </section>
+        <section id="formations">
+    <h2>Formations</h2>
+    <ul>
+        <li><strong>2024 - Présent :</strong> Licence en Informatique, ESGIS Bénin</li>
+        <li><strong>2020 - 2023 :</strong> Études en Histoire et Archéologie(ART) </li>
+        <li><strong>2020 :</strong> Baccalauréat série D</li>
+    </ul>
+</section>
+
 
     </main>
 
