--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
                 des solutions numériques efficaces.
             </p>
         </section>
-        <section id="formations">
+        <section>
     <h2>Formations</h2>
     <ul>
         <li><strong>2024 - Présent :</strong> Licence en Informatique, ESGIS Bénin</li>
         <li><strong>2020 - 2023 :</strong> Études en Histoire et Archéologie(ART) </li>
         <li><strong>2020 :</strong> Baccalauréat série D</li>
+    </ul>
+</section>
+<section>
+    <h2>Compétences</h2>
+    <ul>
+        li>Langages : C, Java, PHP, HTML, CSS</li>
+        <li>Outils : Git, GitHub, Visual Studio Code, WAMP</li>
+        <li>Bases de données : MySQL</li>
     </ul>
 </section>
 
