mise en place de section competences

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         <li>Bases de données : MySQL</li>
     </ul>
 </section>
+<section >
+    <h2>Associations et Activités</h2>
+    <p>Membre et secrétaire général de la chorale Belcanto.</p>
+    <p>Encadrant et motivateur d’enfants à travers des programmes éducatifs.</p>
+    <p>Consultant en cuniculture et promoteur du projet <strong>Lapinière FADOU</strong>.</p>
+</section>
+
 
 
     </main>
