--- a/index.html
+++ b/index.html
@@ -9,9 +9,24 @@
 </head>
 
 <body>
-    <header id="titre">
-        <h1>FADOU Léon</h1>
-        <p class="poste">Étudiant en programmation </p>
+     <header>
+        <div class="nav">
+            <h2>MON-CV</h2>
+            <div class="liens">
+                <a href="">Titre</a>
+                <a href="#about">Descriptions</a>
+                <a href="#education">Formations</a>
+                <a href="#experience">Expériences</a>
+                <a href="#skills">Compétences </a>
+                <a href="#associations">Associations</a>
+            </div>
+        </div>
+
+        <div class="titre">
+            <h3>Développeur Web Backend.</h3>
+            <h1>FADOU Léon K.</h1>
+        </div>
+
     </header>
 
 </body>
