mise en place de section description

--- a/index.html
+++ b/index.html
@@ -9,22 +9,38 @@
 </head>
 
 <body>
-    <header id="titre">
-        <h1>FADOU Léon</h1>
-        <p class="poste">Étudiant en programmation </p>
-    </header>
-    <main>
-        <section>
-            <h2>Description</h2>
-            <p>
-                Passionné par le développement informatique, j’aime concevoir des
-                applications web performantes et apprendre de nouvelles technologies.
-                Mon objectif est de devenir un programmeur complet capable d’apporter
-                des solutions numériques efficaces.
-            </p>
-        </section>
-
-    </main>
+    <section id="about" class="about-section">
+        <div class="container">
+            <div class="about-wrapper">
+                <h2 class="about-title">À propos</h2>
+                <div class="about-card">
+                    <p class="about-text">
+                        Passionné par le développement web et les technologies backend, je conçois et développe
+                        des solutions robustes et évolutives. Mon expertise se concentre sur la création d'architectures
+                        performantes et la mise en place d'APIs RESTful sécurisées.
+                    </p>
+                    <p class="about-text">
+                        Avec une approche orientée qualité et performance, je m'efforce de créer des systèmes
+                        qui répondent aux besoins métier tout en respectant les meilleures pratiques de développement.
+                    </p>
+                    <div class="stats-grid">
+                        <div class="stat-item">
+                            <div class="stat-value">02+</div>
+                            <div class="stat-label">Années d'expérience</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-value">07+</div>
+                            <div class="stat-label">Projets réalisés</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-value">05+</div>
+                            <div class="stat-label">Projets terminés</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
