--- a/index.html
+++ b/index.html
@@ -9,32 +9,42 @@
 </head>
 
 <body>
-    <header id="titre">
-        <h1>FADOU Léon</h1>
-        <p class="poste">Étudiant en programmation </p>
-    </header>
-    <main>
-        <section>
-            <h2>Description</h2>
-            <p>
-                Passionné par le développement informatique, j’aime concevoir des
-                applications web performantes et apprendre de nouvelles technologies.
-                Mon objectif est de devenir un programmeur complet capable d’apporter
-                des solutions numériques efficaces.
-            </p>
-        </section>
-        <section id="formations">
-    <h2>Formations</h2>
-    <ul>
-        <li><strong>2024 - Présent :</strong> Licence en Informatique, ESGIS Bénin</li>
-        <li><strong>2020 - 2023 :</strong> Études en Histoire et Archéologie(ART) </li>
-        <li><strong>2020 :</strong> Baccalauréat série D</li>
-    </ul>
-</section>
+       <section id="education" class="education-section">
+        <div class="container">
+            <div class="education-wrapper">
+                <h2 class="education-title">Formations</h2>
 
+                <div class="education-list">
+                    <div class="education-card">
+                        <div class="education-header">
+                            <div>
+                                <h3 class="education-degree">Master en Développement Web</h3>
+                                <p class="education-school">Université de Paris</p>
+                            </div>
+                            <span class="education-period">2020 - 2022</span>
+                        </div>
+                        <p class="education-description">
+                            Spécialisation en conception d’architectures backend, création d’APIs RESTful
+                            et intégration de solutions cloud.
+                        </p>
+                    </div>
 
-    </main>
-
+                    <div class="education-card">
+                        <div class="education-header">
+                            <div>
+                                <h3 class="education-degree">Licence Informatique</h3>
+                                <p class="education-school">Université de Lyon</p>
+                            </div>
+                            <span class="education-period">2017 - 2020</span>
+                        </div>
+                        <p class="education-description">
+                            Formation en algorithmique, développement full-stack et bases de données.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
