--- a/index.html
+++ b/index.html
@@ -9,46 +9,55 @@
 </head>
 
 <body>
-    <header id="titre">
-        <h1>FADOU Léon</h1>
-        <p class="poste">Étudiant en programmation </p>
-    </header>
-    <main>
-        <section>
-            <h2>Description</h2>
-            <p>
-                Passionné par le développement informatique, j’aime concevoir des
-                applications web performantes et apprendre de nouvelles technologies.
-                Mon objectif est de devenir un programmeur complet capable d’apporter
-                des solutions numériques efficaces.
-            </p>
-        </section>
-        <section>
-    <h2>Formations</h2>
-    <ul>
-        <li><strong>2024 - Présent :</strong> Licence en Informatique, ESGIS Bénin</li>
-        <li><strong>2020 - 2023 :</strong> Études en Histoire et Archéologie(ART) </li>
-        <li><strong>2020 :</strong> Baccalauréat série D</li>
-    </ul>
-</section>
-<section>
-    <h2>Compétences</h2>
-    <ul>
-        li>Langages : C, Java, PHP, HTML, CSS</li>
-        <li>Outils : Git, GitHub, Visual Studio Code, WAMP</li>
-        <li>Bases de données : MySQL</li>
-    </ul>
-</section>
-<section >
-    <h2>Associations et Activités</h2>
-    <p>Membre et secrétaire général de la chorale Belcanto.</p>
-    <p>Encadrant et motivateur d’enfants à travers des programmes éducatifs.</p>
-    <p>Consultant en cuniculture et promoteur du projet <strong>Lapinière FADOU</strong>.</p>
-</section>
+ <section id="experience" class="experience-section">
+        <div class="container">
+            <div class="experience-wrapper">
+                <h2 class="experience-title">Expériences</h2>
 
+                <div class="experience-list">
+                    <div class="experience-card">
+                        <div class="experience-header">
+                            <div>
+                                <h3 class="experience-role">Développeur Backend</h3>
+                                <p class="experience-company">TechCorp Solutions</p>
+                            </div>
+                            <span class="experience-period">2022 - Présent</span>
+                        </div>
+                        <p class="experience-description">
+                            Développement d’APIs RESTful et intégration de microservices avec Node.js et PostgreSQL.
+                            Amélioration des performances backend et automatisation des processus CI/CD.
+                        </p>
+                        <div class="experience-tech">
+                            <span class="tech-badge">Node.js</span>
+                            <span class="tech-badge">Express</span>
+                            <span class="tech-badge">PostgreSQL</span>
+                            <span class="tech-badge">Docker</span>
+                        </div>
+                    </div>
 
-
-    </main>
+                    <div class="experience-card">
+                        <div class="experience-header">
+                            <div>
+                                <h3 class="experience-role">Développeur Full Stack</h3>
+                                <p class="experience-company">WebInnov</p>
+                            </div>
+                            <span class="experience-period">2020 - 2022</span>
+                        </div>
+                        <p class="experience-description">
+                            Conception et développement d’applications web réactives avec React et Node.js.
+                            Participation à la mise en place d’architectures cloud évolutives.
+                        </p>
+                        <div class="experience-tech">
+                            <span class="tech-badge">React</span>
+                            <span class="tech-badge">Node.js</span>
+                            <span class="tech-badge">MongoDB</span>
+                            <span class="tech-badge">AWS</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
