mise en place de section association

--- a/index.html
+++ b/index.html
@@ -9,47 +9,43 @@
 </head>
 
 <body>
-    <header id="titre">
-        <h1>FADOU Léon</h1>
-        <p class="poste">Étudiant en programmation </p>
-    </header>
-    <main>
-        <section>
-            <h2>Description</h2>
-            <p>
-                Passionné par le développement informatique, j’aime concevoir des
-                applications web performantes et apprendre de nouvelles technologies.
-                Mon objectif est de devenir un programmeur complet capable d’apporter
-                des solutions numériques efficaces.
-            </p>
-        </section>
-        <section>
-    <h2>Formations</h2>
-    <ul>
-        <li><strong>2024 - Présent :</strong> Licence en Informatique, ESGIS Bénin</li>
-        <li><strong>2020 - 2023 :</strong> Études en Histoire et Archéologie(ART) </li>
-        <li><strong>2020 :</strong> Baccalauréat série D</li>
-    </ul>
-</section>
-<section>
-    <h2>Compétences</h2>
-    <ul>
-        li>Langages : C, Java, PHP, HTML, CSS</li>
-        <li>Outils : Git, GitHub, Visual Studio Code, WAMP</li>
-        <li>Bases de données : MySQL</li>
-    </ul>
-</section>
-<section >
-    <h2>Associations et Activités</h2>
-    <p>Membre et secrétaire général de la chorale Belcanto.</p>
-    <p>Encadrant et motivateur d’enfants à travers des programmes éducatifs.</p>
-    <p>Consultant en cuniculture et promoteur du projet <strong>Lapinière FADOU</strong>.</p>
-</section>
+<section id="associations" class="associations-section">
+        <div class="container">
+            <div class="associations-wrapper">
+                <h2 class="associations-title">Associations</h2>
 
+                <div class="associations-list">
+                    <div class="associations-card">
+                        <div class="associations-header">
+                            <div>
+                                <h3 class="associations-name">Open Source France</h3>
+                                <p class="associations-role">Membre actif</p>
+                            </div>
 
+                        </div>
+                        <p class="associations-description">
+                            Participation à des projets open source autour du développement backend et à
+                            la création de documentation technique pour la communauté.
+                        </p>
+                    </div>
 
-    </main>
+                    <div class="associations-card">
+                        <div class="associations-header">
+                            <div>
+                                <h3 class="associations-name">Code for Good</h3>
+                                <p class="associations-role">Responsable technique</p>
+                            </div>
 
+                        </div>
+                        <p class="associations-description">
+                            Coordination d’une équipe de développeurs bénévoles pour la conception
+                            d’outils web destinés à des associations caritatives locales.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
