mise en place de section competences

--- a/index.html
+++ b/index.html
@@ -9,49 +9,81 @@
 </head>
 
 <body>
-     <section id="experience" class="experience-section">
+     <section id="skills" class="skills-section">
         <div class="container">
-            <div class="experience-wrapper">
-                <h2 class="experience-title">Expériences</h2>
+            <div class="skills-wrapper">
+                <h2 class="skills-title">Compétences</h2>
 
-                <div class="experience-list">
-                    <div class="experience-card">
-                        <div class="experience-header">
-                            <div>
-                                <h3 class="experience-role">Développeur Backend</h3>
-                                <p class="experience-company">TechCorp Solutions</p>
+                <div class="skills-grid">
+                    <!-- Catégorie 1 -->
+                    <div class="skills-card">
+                        <h3 class="skills-category">Développement Backend</h3>
+                        <div class="skills-list">
+                            <div class="skill">
+                                <div class="skill-header">
+                                    <span class="skill-name">Node.js</span>
+                                    <span class="skill-level">90%</span>
+                                </div>
+                                <div class="skill-bar">
+                                    <div class="skill-fill" style="width: 90%"></div>
+                                </div>
                             </div>
-                            <span class="experience-period">2022 - Présent</span>
-                        </div>
-                        <p class="experience-description">
-                            Développement d’APIs RESTful et intégration de microservices avec Node.js et PostgreSQL.
-                            Amélioration des performances backend et automatisation des processus CI/CD.
-                        </p>
-                        <div class="experience-tech">
-                            <span class="tech-badge">Node.js</span>
-                            <span class="tech-badge">Express</span>
-                            <span class="tech-badge">PostgreSQL</span>
-                            <span class="tech-badge">Docker</span>
+
+                            <div class="skill">
+                                <div class="skill-header">
+                                    <span class="skill-name">Express</span>
+                                    <span class="skill-level">85%</span>
+                                </div>
+                                <div class="skill-bar">
+                                    <div class="skill-fill" style="width: 85%"></div>
+                                </div>
+                            </div>
+
+                            <div class="skill">
+                                <div class="skill-header">
+                                    <span class="skill-name">PostgreSQL</span>
+                                    <span class="skill-level">80%</span>
+                                </div>
+                                <div class="skill-bar">
+                                    <div class="skill-fill" style="width: 80%"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="experience-card">
-                        <div class="experience-header">
-                            <div>
-                                <h3 class="experience-role">Développeur Full Stack</h3>
-                                <p class="experience-company">WebInnov</p>
+                    <!-- Catégorie 2 -->
+                    <div class="skills-card">
+                        <h3 class="skills-category">Développement Frontend</h3>
+                        <div class="skills-list">
+                            <div class="skill">
+                                <div class="skill-header">
+                                    <span class="skill-name">React</span>
+                                    <span class="skill-level">85%</span>
+                                </div>
+                                <div class="skill-bar">
+                                    <div class="skill-fill" style="width: 85%"></div>
+                                </div>
                             </div>
-                            <span class="experience-period">2020 - 2022</span>
-                        </div>
-                        <p class="experience-description">
-                            Conception et développement d’applications web réactives avec React et Node.js.
-                            Participation à la mise en place d’architectures cloud évolutives.
-                        </p>
-                        <div class="experience-tech">
-                            <span class="tech-badge">React</span>
-                            <span class="tech-badge">Node.js</span>
-                            <span class="tech-badge">MongoDB</span>
-                            <span class="tech-badge">AWS</span>
+
+                            <div class="skill">
+                                <div class="skill-header">
+                                    <span class="skill-name">HTML / CSS</span>
+                                    <span class="skill-level">95%</span>
+                                </div>
+                                <div class="skill-bar">
+                                    <div class="skill-fill" style="width: 95%"></div>
+                                </div>
+                            </div>
+
+                            <div class="skill">
+                                <div class="skill-header">
+                                    <span class="skill-name">Tailwind CSS</span>
+                                    <span class="skill-level">90%</span>
+                                </div>
+                                <div class="skill-bar">
+                                    <div class="skill-fill" style="width: 90%"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
