--- a/index.html
+++ b/index.html
@@ -18,27 +18,28 @@
                     <div class="education-card">
                         <div class="education-header">
                             <div>
-                                <h3 class="education-degree">Master en Développement Web</h3>
-                                <p class="education-school">Université de Paris</p>
+                                <h3 class="education-degree">licence en Informatique</h3>
+                                <p class="education-school">Université ESGIS BENIN</p>
                             </div>
-                            <span class="education-period">2020 - 2022</span>
+                            <span class="education-period">2024 - Présent</span>
                         </div>
                         <p class="education-description">
-                            Spécialisation en conception d’architectures backend, création d’APIs RESTful
-                            et intégration de solutions cloud.
+                           Études axées sur le développement d’applications web, les langages de programmation (C, PHP, Java)
+                            et la conception de bases de données avec MySQL.
                         </p>
                     </div>
 
                     <div class="education-card">
                         <div class="education-header">
                             <div>
-                                <h3 class="education-degree">Licence Informatique</h3>
-                                <p class="education-school">Université de Lyon</p>
+                                <h3 class="education-degree">Licence en Histoire et Archéologie</h3>
+                                <p class="education-school">Université d’Abomey-Calavi (UAC)</p>
                             </div>
-                            <span class="education-period">2017 - 2020</span>
+                            <span class="education-period">2020- 2023</span>
                         </div>
                         <p class="education-description">
-                            Formation en algorithmique, développement full-stack et bases de données.
+                                                       Études sur la valorisation du patrimoine culturel, la recherche historique
+                            et l’analyse des civilisations anciennes.
                         </p>
                     </div>
                 </div>
