mise en place de section experiences

--- a/index.html
+++ b/index.html
@@ -19,19 +19,17 @@
                         <div class="experience-header">
                             <div>
                                 <h3 class="experience-role">Développeur Backend</h3>
-                                <p class="experience-company">TechCorp Solutions</p>
+                                <p class="experience-company">Personnelle</p>
                             </div>
                             <span class="experience-period">2022 - Présent</span>
                         </div>
                         <p class="experience-description">
-                            Développement d’APIs RESTful et intégration de microservices avec Node.js et PostgreSQL.
-                            Amélioration des performances backend et automatisation des processus CI/CD.
+                            Développement du Jeux Flappy Bird en Java.
+                            Gestion de base de données avec MySQL pour stocker les scores des joueurs.
                         </p>
                         <div class="experience-tech">
-                            <span class="tech-badge">Node.js</span>
-                            <span class="tech-badge">Express</span>
-                            <span class="tech-badge">PostgreSQL</span>
-                            <span class="tech-badge">Docker</span>
+                            <span class="tech-badge">Java</span>
+                            <span class="tech-badge">MySql</span>
                         </div>
                     </div>
 
@@ -39,19 +37,20 @@
                         <div class="experience-header">
                             <div>
                                 <h3 class="experience-role">Développeur Full Stack</h3>
-                                <p class="experience-company">WebInnov</p>
+                                <p class="experience-company">Personnelle</p>
                             </div>
                             <span class="experience-period">2020 - 2022</span>
                         </div>
                         <p class="experience-description">
-                            Conception et développement d’applications web réactives avec React et Node.js.
-                            Participation à la mise en place d’architectures cloud évolutives.
+                            Conception et développement d’applications web de vente de fruits à l'occasion du Ramadan.
+                            Gestion de la base de données MySQL pour les produits et les commandes.
                         </p>
                         <div class="experience-tech">
-                            <span class="tech-badge">React</span>
-                            <span class="tech-badge">Node.js</span>
-                            <span class="tech-badge">MongoDB</span>
-                            <span class="tech-badge">AWS</span>
+                            <span class="tech-badge">HTML</span>
+                            <span class="tech-badge">CSS</span>
+                            <span class="tech-badge">Php</span>
+                            <span class="tech-badge">JavaScrip</span>
+                            <span class="tech-badge">MySql</span>
                         </div>
                     </div>
                 </div>
