--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
                         <div class="skills-list">
                             <div class="skill">
                                 <div class="skill-header">
-                                    <span class="skill-name">Node.js</span>
-                                    <span class="skill-level">90%</span>
+                                    <span class="skill-name">Java</span>
+                                    <span class="skill-level">40%</span>
                                 </div>
                                 <div class="skill-bar">
-                                    <div class="skill-fill" style="width: 90%"></div>
+                                    <div class="skill-fill" style="width: 40%"></div>
                                 </div>
                             </div>
 
                             <div class="skill">
                                 <div class="skill-header">
-                                    <span class="skill-name">Express</span>
-                                    <span class="skill-level">85%</span>
+                                    <span class="skill-name">MySql</span>
+                                    <span class="skill-level">50%</span>
                                 </div>
                                 <div class="skill-bar">
-                                    <div class="skill-fill" style="width: 85%"></div>
+                                    <div class="skill-fill" style="width: 50%"></div>
                                 </div>
                             </div>
 
                             <div class="skill">
                                 <div class="skill-header">
-                                    <span class="skill-name">PostgreSQL</span>
-                                    <span class="skill-level">80%</span>
+                                    <span class="skill-name">Php</span>
+                                    <span class="skill-level">40%</span>
                                 </div>
                                 <div class="skill-bar">
-                                    <div class="skill-fill" style="width: 80%"></div>
+                                    <div class="skill-fill" style="width: 40%"></div>
                                 </div>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                         <div class="skills-list">
                             <div class="skill">
                                 <div class="skill-header">
-                                    <span class="skill-name">React</span>
+                                    <span class="skill-name">HTML</span>
                                     <span class="skill-level">85%</span>
                                 </div>
                                 <div class="skill-bar">
@@ -77,11 +77,11 @@
 
                             <div class="skill">
                                 <div class="skill-header">
-                                    <span class="skill-name">Tailwind CSS</span>
-                                    <span class="skill-level">90%</span>
+                                    <span class="skill-name">JavaScrip</span>
+                                    <span class="skill-level">20%</span>
                                 </div>
                                 <div class="skill-bar">
-                                    <div class="skill-fill" style="width: 90%"></div>
+                                    <div class="skill-fill" style="width: 20%"></div>
                                 </div>
                             </div>
                         </div>
